# near-clear-state

./: .gitignore  Cargo.toml  NOTICE.txt  README.md  index.js  package-lock.json  package.json
commands/: clearState.js
contract/: Cargo.toml
contract/src/: lib.rs
contractWasm/: state_cleanup.wasm
extension/: Cargo.toml
extension/src/: cleanup.rs  lib.rs  main.rs  plan.rs
extension/tests/: fill_only.rs  integration.rs
extension/tests/fixtures/: state_filler.wasm
extension/wasm/: state_cleanup.wasm  state_cleanup.wasm.provenance
scripts/: update-wasm.sh  verify-wasm.sh
state-cleanup/: Cargo.toml
state-cleanup/src/: lib.rs
test-contracts/state-filler/: Cargo.toml  rust-toolchain.toml
test-contracts/state-filler/src/: lib.rs
