[workspace]
resolver = "2"
members = ["extension"]
# test-contracts/state-filler is its own cargo-near project (separate
# toolchain + build flow) and must stay out of the extension workspace.
exclude = ["test-contracts/state-filler"]

# The profile that 'cargo dist' will build with — matches near-cli-rs /
# near-validator-cli-rs so distributed binaries get the same treatment.
[profile.dist]
inherits = "release"
lto = "thin"
