[package]
name = "state-cleanup"
version = "0.1.0"
edition = "2024"
publish = false

# Required by cargo-near for reproducible builds.
repository = "https://github.com/PiVortex/contract-cleaner"

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.19.0-rust-1.86.0"
image_digest = "sha256:772638e343baeeea24e49062c7d424274f3441452cc06ce97fc4e5695b19fecc"
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "=5.26.1"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
