[package]
name = "state-cleanup"
version = "0.1.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = { version = "=0.22.1", default-features = false, features = ["alloc"] }
near-sdk = "=5.26.1"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
